solvers/TCS-Meiji/td-validate-master/test/valid/two-vertices.td
s td 2 1 2
b 1 1
b 2 2
1 2
