solvers/TCS-Meiji/td-validate-master/test/invalid/s-appears-twice.td
s td 0 0 0
s td 0 0 0
